# postgresql-extensions-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  foobar.c  make.bat  make.ps1  make.sh
.github/workflows/: linux.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml  windows.yml
cmake/: AddPostgreSQLExtension.cmake  FindPostgreSQL.cmake  control.in
extension_basic/: CMakeLists.txt  basic--1.0.0--2.0.0.sql  basic--1.0.0.sql  basic.c
extension_basic/expected/: test1.out
extension_basic/sql/: test1.sql
extension_dependant/: CMakeLists.txt  dependant--1.0.0.sql  dependant.c
extension_dependant/dependencies/: CMakeLists.txt
extension_dependant/expected/: test1.out
extension_dependant/sql/: test1.sql
extension_onlysql/: CMakeLists.txt  onlysql--1.0.0.sql
extension_onlysql/expected/: test1.out
extension_onlysql/sql/: test1.sql
foobar/: CMakeLists.txt  foobar.c  foobar.control
foobar/sql/: test1.sql
include/: shared.h  shared.h.in
